Updates to user db. can now create users with the rails database

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,5 +7,5 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", '/', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
 </div>
