--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<div class="d-flex justify-content-center mt-3">
+    <div class="col-sm-5 pull-right">
+        <%= render 'layouts/login_form' %>
+    </div>
+</div>
