--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-    <div class="center jumbotron">
+    <div class="center jumbotron jumbotron-welcome">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
