--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,9 @@
 
 .jumbotron-welcome {
     min-height: 750px;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('gifloop.gif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
   
