--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <h1>Welcome to the Sample App</h1>
-                    <h2>
+                    <h1 class="display-4 text-white">Welcome to the Sample App</h1>
+                    <h2 class="lead text-white">
                         This is the home page for the
                         <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
                         sample application.
