--- a/app/views/layouts/_login_form.html.erb
+++ b/app/views/layouts/_login_form.html.erb
@@ -34,26 +34,32 @@
                 </form>
             </div>
             <div class="login-box tab-pane" id="register-pane" role="tabpanel">
-                <form>
+                <!--<form> -->
+                <%= form_for(@user) do |f| %>
                     <div class="form-group">
                         <label for="name">Full name:</label>
-                        <input type="text" class="form-control" name="fullname" id="fullname" required/>
+                        <!--<input type="text" class="form-control" name="fullname" id="fullname" required/>-->
+                        <%= f.text_field :name, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="username">Username:</label>
-                        <input type="text" class="form-control" name="username" id="username" required/>
+                        <!--<input type="text" class="form-control" name="username" id="username" required/>-->
+                        <%= f.text_field :username, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="email" class="form-control" name="email" id="email" required/>
-                    </div>
-                    <div class="form-group">
-                        <label for="email_confirmation">Email confirmation:</label>
-                        <input type="email" class="form-control" name="email" id="email" required/>
+                        <!--<input type="email" class="form-control" name="email" id="email" required/>-->
+                        <%= f.email_field :email, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label>
-                        <input type="password" class="form-control" name="password" id="password" required/>
+                        <!--<input type="password" class="form-control" name="password" id="password" required/>-->
+                        <%= f.password_field :password, class: "form-control" %>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password Confirmation</label>
+                        <!--<input type="password" class="form-control" name="password" id="password" required/>-->
+                        <%= f.password_field :password_confirmation, class: "form-control" %>
                     </div>
                     <div className="terms-and-conditions checkbox mt-3">
                         <div class="form-group ml-4">
@@ -108,8 +114,10 @@
                             </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Register</Button>
-                </form>
+                    <!--<button type="submit" class="btn btn-primary btn-block">Register</Button>-->
+                    <%= f.submit "Create my account", class: "btn btn-primary btn-block" %>
+                <!--</form> -->
+                <% end %>
             </div>
         </div>
     </div>
