--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       </script>
     <![endif]-->
   </head>
-  <%= render 'layouts/navigation' %>
+  <%= render 'shared/navigation' %>
   <div class="root">
     <%= yield %>
   </div>
