--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="d-flex justify-content-center mt-3">
     <div class="col-sm-5 pull-right">
-        <%= render 'layouts/login_form' %>
+        <%= render 'shared/login_form' %>
     </div>
 </div>
