--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
                     <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
                 </div>
                 <div class="col-md-6">
-                    <%= render 'layouts/login_form' %>
+                    <%= render 'shared/login_form' %>
                 </div>
             </div>
         </div>
