--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="card-body login-max-width">
+        <%= render 'shared/error_messages' %>
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active" href="#login-pane" data-toggle="tab" aria-expanded="false">Login</a>
@@ -13,11 +14,11 @@
                 <form>
                     <div class="form-group">
                         <label for="user-email">Email:</Label>
-                        <input type="email" class="form-control" name="user-email" id="user-email" required/>
+                        <input type="email" class="form-control" name="user-email" id="user-email"/>
                     </div>
                     <div class="form-group">
                         <label for="user-password">Password</Label>
-                        <input type="password" class="form-control" name="user-password" id="user-password" required/>
+                        <input type="password" class="form-control" name="user-password" id="user-password"/>
                     </div>
                     <div class="remember-me checkbox">
                         <div class="form-group ml-4">
