--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,5 @@
   <div class="root">
     <%= yield %>
   </div>
-  <%= debug(params) if Rails.env.development? %>
+  <!--<%= debug(params) if Rails.env.development? %>-->
 </html>
