--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,16 +3,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <h1 class="display-4 text-white">Welcome to the Sample App</h1>
+                    <h1 class="display-4 text-white">Welcome to the SocialNetwork</h1>
                     <h2 class="lead text-white">
-                        This is the home page for the
-                        <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-                        sample application.
+                        Follow your friends, celebrities, athletes, politicians, artists, bands, and more! A place for free expression.
                     </h2>
                     <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
                 </div>
                 <div class="col-md-6">
-                    <%= render 'shared/login_form' %>
                 </div>
             </div>
         </div>
