--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,6 +1,5 @@
 <div class="card">
     <div class="card-body login-max-width">
-        <%= render 'shared/error_messages' %>
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active" href="#login-pane" data-toggle="tab" aria-expanded="false">Login</a>
@@ -11,14 +10,17 @@
         </ul>
         <div class="tab-content mt-3">
             <div class="active login-box tab-pane" id="login-pane" role="tabpanel">
-                <form>
+                <!--<form>-->
+                <%= form_for(:session, url: login_path) do |e| %>
                     <div class="form-group">
                         <label for="user-email">Email:</Label>
-                        <input type="email" class="form-control" name="user-email" id="user-email"/>
+                        <!--<input type="email" class="form-control" name="user-email" id="user-email"/>-->
+                        <%= e.email_field :email, class: 'form-control' %>
                     </div>
                     <div class="form-group">
                         <label for="user-password">Password</Label>
-                        <input type="password" class="form-control" name="user-password" id="user-password"/>
+                        <!--<input type="password" class="form-control" name="user-password" id="user-password"/>-->
+                        <%= e.password_field :password, class: 'form-control' %>
                     </div>
                     <div class="remember-me checkbox">
                         <div class="form-group ml-4">
@@ -31,36 +33,38 @@
                             </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">Sign In</Button>
-                </form>
+                    <!--<button type="submit" class="btn btn-success btn-block">Sign In</Button>-->
+                    <%= e.submit "Log in", class: "btn btn-success btn-block" %>
+                <!--</form>-->
+                <% end %>
             </div>
             <div class="login-box tab-pane" id="register-pane" role="tabpanel">
                 <!--<form> -->
-                <%= form_for(@user) do |f| %>
+                <%= form_for(:user) do |e| %>
                     <div class="form-group">
                         <label for="name">Full name:</label>
                         <!--<input type="text" class="form-control" name="fullname" id="fullname" required/>-->
-                        <%= f.text_field :name, class: "form-control" %>
+                        <%= e.text_field :name, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="username">Username:</label>
                         <!--<input type="text" class="form-control" name="username" id="username" required/>-->
-                        <%= f.text_field :username, class: "form-control" %>
+                        <%= e.text_field :username, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="email">Email:</label>
                         <!--<input type="email" class="form-control" name="email" id="email" required/>-->
-                        <%= f.email_field :email, class: "form-control" %>
+                        <%= e.email_field :email, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label>
                         <!--<input type="password" class="form-control" name="password" id="password" required/>-->
-                        <%= f.password_field :password, class: "form-control" %>
+                        <%= e.password_field :password, class: "form-control" %>
                     </div>
                     <div class="form-group">
                         <label for="password">Password Confirmation</label>
                         <!--<input type="password" class="form-control" name="password" id="password" required/>-->
-                        <%= f.password_field :password_confirmation, class: "form-control" %>
+                        <%= e.password_field :password_confirmation, class: "form-control" %>
                     </div>
                     <div className="terms-and-conditions checkbox mt-3">
                         <div class="form-group ml-4">
@@ -116,7 +120,7 @@
                         </div>
                     </div>
                     <!--<button type="submit" class="btn btn-primary btn-block">Register</Button>-->
-                    <%= f.submit "Create my account", class: "btn btn-primary btn-block" %>
+                    <%= e.submit "Create my account", class: "btn btn-primary btn-block" %>
                 <!--</form> -->
                 <% end %>
             </div>
