--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -5,8 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
-            <li><%= link_to "Home", root_path, class: 'nav-link' %></li>
-            <li><%= link_to "Help", '#', class: 'nav-link' %></li>
+            <li><%= link_to "Help", '/', class: 'nav-link' %></li>
             <% if logged_in? %>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
@@ -14,13 +13,13 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li><%= link_to "Profile", current_user, class: 'dropdown-item' %></li>
-                    <li><%= link_to "Settings", '#', class: 'dropdown-item' %></li>
+                    <li><%= link_to "Settings", edit_user_path(current_user), class: 'dropdown-item' %></li>
                     <div class="dropdown-divider"></div>
                     <li><%= link_to "Log out", logout_path, method: :delete, class: 'dropdown-item' %></li>
                 </ul>
             </li>
         <% else %>
-             <li><%= link_to "Log in", login_path, class: 'nav-link' %></li>
+             
         <% end %>
         </ul>
     </div>
