--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center mt-3">
     <div class="col-sm-5 pull-right">
-        <%= render 'shared/login_form' %>
+        <%= render 'shared/signup_form' %>
     </div>
 </div>
