--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,18 @@
+<% if logged_in? %>
+
+<% else %>
 <div class="center jumbotron jumbotron-welcome">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mb-3">
                 <h1 class="display-4 text-white">Welcome to the SocialNetwork</h1>
                 <h2 class="lead text-white">
-                    Follow your friends, celebrities, athletes, politicians, artists, bands, and more! A place for free expression.
+                    Sign up and follow friends, artists, bands, interest groups, and more!
                 </h2>
                 <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
+            </div>
+            <div class="col-md-6 mb-3">
+                <%= render 'shared/login_form' %>
             </div>
         </div>
     </div>
@@ -21,3 +27,4 @@
       border-radius: 0%;
   }
 </style>
+<% end %>
