--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,6 +25,9 @@
             <div class="form-group">
                 <%= f.label :password_confirmation, "Password Confirmation" %>
                 <%= f.password_field :password_confirmation, class: 'form-control' %>
+                <small class="text-muted">
+                    Must be 8-20 characters long.
+                </small>
             </div>
             <div class="form-group">
                 <%= f.submit "Save changes", class: "btn btn-success" %>
