--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -3,11 +3,14 @@
         <%= form_for(:session, url: login_path) do |e| %>
             <div class="form-group">
                 <%= e.label :email %>
-                <%= e.email_field :email, class: 'form-control' %>
+                <%= e.email_field :email, class: 'form-control', placeholder: "name@example.com" %>
             </div>
             <div class="form-group">
                 <%= e.label :password %>
-                <%= e.password_field :password, class: 'form-control' %>
+                <%= e.password_field :password, class: 'form-control', placeholder: "Your password" %>
+                <small class="text-muted">
+                    Must be 8-20 characters long.
+                </small>
             </div>
             <div class="remember-me checkbox">
                 <div class="form-group ml-4">
