--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,10 +9,9 @@
                 <h2 class="lead text-white">
                     Sign up and follow friends, artists, bands, interest groups, and more!
                 </h2>
-                <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
             </div>
             <div class="col-md-6 mb-3">
-                <%= render 'shared/login_form' %>
+                <%= render 'shared/signup_form' %>
             </div>
         </div>
     </div>
