--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,4 +1,5 @@
 <div class="card">
+    <%= render 'shared/error_messages' %>
     <div class="card-body login-max-width">
         <%= form_for(:session, url: login_path) do |e| %>
             <div class="form-group">
@@ -22,7 +23,7 @@
             </div>
             <div class="row mb-3">
                 <div class="col-md-8 forgot-password">
-                    <%= link_to "Forgot Password?", 'users#forgot' %>
+                    <%= link_to "Forgot Password?", 'users#forgot' %><!-- change this later, also in signup for partial -->
                 </div>
                 <div class="col-md-4 sign-up">
                     <%= link_to "Sign up now!", signup_path %>
