--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -5,11 +5,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
-            <li><%= link_to "Help", '/', class: 'nav-link' %></li>
             <% if logged_in? %>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                Account <%= octicon "chevron-down" %>
+                Account
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li><%= link_to "Profile", current_user, class: 'dropdown-item' %></li>
@@ -21,6 +20,7 @@
         <% else %>
              
         <% end %>
+        <li><%= link_to "Help", '/', class: 'nav-link' %></li>
         </ul>
     </div>
 </nav>
