--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <section class="user_info">
       <h1>
         <div class="row"><%= gravatar_for @user %></div>
-        <div class="row"><%= @user.name %></div>
+        <div class="row"><%= @user.username %></div>
       </h1>
     </section>
   </aside>
