--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,7 +9,7 @@ $gray-medium-light: #eaeaea;
 }
 
 /* miscellaneous */
-
+/* debug dump for non-prod */
 .debug_dump {
   clear: both;
   float: left;
