--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-body login-max-width">
 <!--<form> -->
-    <%= form_for(@user, :novalidate => 'novalidate') do |e| %>
+    <%= form_for(@user) do |e| %>
     <div class="form-group input-group-lg">
         <label for="username">Username:</label>
         <%= e.text_field :username, class: "form-control", placeholder: 'My Nickname' %>
