--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,10 @@
       <h1>
         <div class="row"><%= gravatar_for @user %></div>
         <div class="row"><%= @user.username %></div>
+        <% if current_user.admin? && !current_user?(user) %>
+    |   <%= link_to "delete", user, method: :delete,
+                                  data: { confirm: "Are you sure you want to delete?" } %>
+        <% end %>
       </h1>
     </section>
   </aside>
