--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -3,7 +3,7 @@
         <%= form_for(:session, url: login_path) do |e| %>
             <div class="form-group">
                 <%= e.label :email %>
-                <%= e.email_field :email, class: 'form-control', placeholder: "name@example.com" %>
+                <%= e.email_field :email, class: 'form-control', placeholder: "myname@example.com" %>
             </div>
             <div class="form-group">
                 <%= e.label :password %>
