changing size of input boxes on login

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -18,6 +18,7 @@
              
         <% end %>
         <li><%= link_to "Help", '/', class: 'nav-link' %></li>
+        <li><%= link_to "GitHub", 'https://github.com/ahtee/social', class: 'nav-link' %></li>
         </ul>
     </div>
 </nav>
