--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-body login-max-width">
-    <%= form_for(@user) do |e|%>
+    <%= form_for(@user, { class: "needs-validation" }) do |e|%>
     <div class="form-group input-group-lg">
         <label for="username">Username:</label>
         <%= e.text_field :username, class: "form-control", placeholder: 'My Nickname' %>
@@ -78,7 +78,7 @@
     <%= e.submit "Create my account", class: "btn btn-primary btn-block btn-lg mt-3" %>
     <div class="row mt-3">
         <div class="col-md-8 forgot-password text-left">
-            <%= link_to "Forgot Password?", 'users#forgot' %><!-- change this later, also in login_form partial -->
+            <%= link_to "Forgot Password?", forgot_path %><!-- change this later, also in login_form partial -->
         </div>
         <div class="col-md-4 sign-up text-right">
             <%= link_to "Log in", login_path %>
@@ -87,3 +87,23 @@
     <% end %>
     </div>
 </div>
+<script>
+// Example starter JavaScript for disabling form submissions if there are invalid fields
+(function() {
+  'use strict';
+  window.addEventListener('load', function() {
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.getElementsByClassName('needs-validation');
+    // Loop over them and prevent submission
+    var validation = Array.prototype.filter.call(forms, function(form) {
+      form.addEventListener('submit', function(event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+})();
+</script>
