Updating profile page and adding delete

--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -78,7 +78,8 @@
     <%= e.submit "Create my account", class: "btn btn-primary btn-block btn-lg mt-3" %>
     <div class="row mt-3">
         <div class="col-md-8 forgot-password text-left">
-            <%= link_to "Forgot Password?", forgot_path %><!-- change this later, also in login_form partial -->
+            <!--<%= link_to "Forgot Password?" %>-->
+            <a href="#">Forgot Password?</a><!-- change this later, also in login_form partial -->
         </div>
         <div class="col-md-4 sign-up text-right">
             <%= link_to "Log in", login_path %>
