--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,32 +23,6 @@ $gray-medium-light: #eaeaea;
 }
 
 /* sidebar temporary */
-
-aside {
-    section.user_info {
-      margin-top: 20px;
-    }
-    section {
-      padding: 10px 0;
-      margin-top: 20px;
-      &:first-child {
-        border: 0;
-        padding-top: 0;
-      }
-      span {
-        display: block;
-        margin-bottom: 3px;
-        line-height: 1;
-      }
-      h1 {
-        font-size: 2em;
-        text-align: left;
-        letter-spacing: -1px;
-        margin-bottom: 3px;
-        margin-top: 0px;
-      }
-    }
-  }
   
   .gravatar {
     float: left;
@@ -59,4 +33,7 @@ aside {
     margin-top: 15px;
   }
 
+  .settings-card {
+    width: 450px;
+  }
   
