--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,42 +1,49 @@
 <div class="container">
-    <h1 class="mt-2">Update profile</h1>
-    <hr />
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <%= form_for(@user) do |f| %>
-            <%= render 'shared/error_messages', object: @user %>
+    <div class="d-flex justify-content-center mt-3">
+        <div class="card w-50">
+            <h5 class="card-header">Settings</h5>
+                <div class="card-body">
+                    <%= form_for(@user) do |f| %>
+                    <%= render 'shared/error_messages', object: @user %>
 
-            <div class="form-group">
-                <%= f.label :name %>
-                <%= f.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-                <%= f.label :username %>
-                <%= f.text_field :username, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-                <%= f.label :email %>
-                <%= f.email_field :email, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-                <%= f.label :password %>
-                <%= f.password_field :password, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-                <%= f.label :password_confirmation, "Password Confirmation" %>
-                <%= f.password_field :password_confirmation, class: 'form-control' %>
-                <small class="text-muted">
-                    Must be 8-20 characters long.
-                </small>
-            </div>
-            <div class="form-group">
-                <%= f.submit "Save changes", class: "btn btn-success" %>
-            </div>
-            <% end %>
-            <div class="form-group">
-                <div class="gravatar_edit">
-                    <%= gravatar_for @user %>
-                    <button href="http://gravatar.com/emails" class="btn btn-primary" target="_blank">Change</button>
+                    <div class="form-group">
+                        <%= f.label :name %>
+                        <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label :username %>
+                        <%= f.text_field :username, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label :email %>
+                        <%= f.email_field :email, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label :password %>
+                        <%= f.password_field :password, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label :password_confirmation, "Password Confirmation" %>
+                        <%= f.password_field :password_confirmation, class: 'form-control' %>
+                        <small class="text-muted">
+                            Must be 8-20 characters long.
+                        </small>
+                    </div>
+                    <div class="form-group">
+                        <%= f.submit "Save", class: "btn btn-success btn-block" %>
+                    </div>
+                    <% end %>
+                    <div class="gravatar_edit">
+                        <div class="row">
+                            <div class="col">
+                                <%= gravatar_for @user %>
+                                <button href="http://gravatar.com/emails" class="btn btn-primary" target="_blank">Change</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <%= link_to "Delete", @user, method: :destroy, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-danger btn-block" %>
+                    </div>
                 </div>
             </div>
         </div>
