--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,16 @@
 <div class="container">
-<% provide(:title, @user.name) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <div class="row"><%= gravatar_for @user %></div>
-        <div class="row"><%= @user.username %></div>
-        <% if current_user.admin? && !current_user?(user) %>
-    |   <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "Are you sure you want to delete?" } %>
-        <% end %>
-      </h1>
-    </section>
-  </aside>
-</div>
+<% provide(:title, @user.username) %>
+  <div class="row mt-4">
+    <div class="col-lg-4">
+      <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">&<%= @user.username %></h3>
+            <div class="row">
+            <div class="col-md-12"><%= gravatar_for @user %></div>
+            <div class="col-md-12 mt-2"><h5 class="card-text"><%= @user.name %></h5></div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
