--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,14 @@
 <% provide(:title, @user.username) %>
   <div class="row mt-4">
     <div class="col-lg-4">
-      <div class="card">
+      <div class="card text-center">
         <div class="card-body">
             <h3 class="card-title">&<%= @user.username %></h3>
+            <div class="row justify-content-center">
+              <%= gravatar_for @user %>
+            </div>
             <div class="row">
-            <div class="col-md-12"><%= gravatar_for @user %></div>
-            <div class="col-md-12 mt-2"><h5 class="card-text"><%= @user.name %></h5></div>
+              <div class="col mt-2"><h5 class="card-text"><%= @user.name %></h5></div>
             </div>
         </div>
       </div>
