--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,34 @@
+
+body {
+  background: #ffffff;   
+}
+
+.hero {
+  position: relative;
+  height: 900px;
+  background-image: linear-gradient(#4568dc, #b06ab3);
+}
+
+.svg-angle-bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10vw;
+    fill: #ffffff;
+}
+
+.svg-angle-top {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 10vw;
+  fill: #ffffff;
+}
+
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
+
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -38,5 +66,5 @@ $gray-medium-light: #eaeaea;
   }
   
   .profile-pic-edit {
-    max-height: 310px;
+    max-height: 330px;
   }
