change button text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,7 +44,7 @@
                 <div class="row justify-content-center">
                     <%= image_tag("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR8fReaSvYXgIPp8Igud_aMvOIIdPB31wXarogrdlz0TMos3GJ", size: "200x200", :alt => "Jane Smith") %>
                 </div>
-                <a href="#" class="btn btn-primary btn-block mt-3">Follow</a>
+                <a href="#" class="btn btn-primary btn-block mt-3">Join</a>
             </div>
         </div>
     </div>
