adding express yourself

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
         </div>
     </div>
 </div>
-<section class="introduction mt-5" style="height: 600px;">
+<section class="d-flex flex-row align-content-center" style="height: 600px;">
     <div class="container">
         <h1 class="display-4 text-center">Follow your Interests</h1>
             <div class="d-flex flex-row justify-content-center">
@@ -51,6 +51,12 @@
     <svg class="svg-angle-bottom" viewBox="0 0 100 100" preserveAspectRatio="none">
         <polygon points="0,100 100,0 100,100" />
     </svg>
+</section>
+<section class="d-flex flex-row align-content-center" style="height: 600px;">
+    <div class="d-flex align-items-center justify-content-center container">
+        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZEVXbMDoHDwVN2tF" class="shadow" width="430" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <h1 class="display-4 text-center ml-auto">Express Yourself</h1>
+    </div>
 </section>
 <style type="text/css">
   .jumbotron-welcome {
