updating hope page with footer & resources

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,6 +3,12 @@ body {
   background: #ffffff;   
 }
 
+.footer {
+  background: #181818;
+  position: relative;
+  bottom: 0;
+}
+
 .hero {
   position: relative;
   height: 900px;
