--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,7 +58,10 @@
         <h1 class="display-4 text-center ml-auto">Express Yourself</h1>
     </div>
 </section>
-<style type="text/css">
+<section class="footer bg-inverse text-white">
+    <%= render 'shared/footer' %>
+</section>
+<style type="text/css"> 
   .jumbotron-welcome {
       background: linear-gradient( rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.0) ), url(<%= randomized_background_image %>);
       min-height: 550px;
