Changing error messages placement

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 <% provide(:title, @user.username) %>
+<%= render 'shared/error_messages' %>
   <div class="row mt-4">
     <div class="col-lg-4">
       <div class="card text-center">
