--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="card-body login-max-width">
+        <%= render 'shared/error_messages' %>
         <%= form_for(:session, url: login_path) do |e| %>
             <div class="form-group input-group-lg">
                 <%= e.label :email %>
