--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -3,25 +3,25 @@
     <%= form_for(@user, { class: "needs-validation" }) do |e|%>
     <div class="form-group input-group-lg">
         <label for="username">Username:</label>
-        <%= e.text_field :username, class: "form-control", placeholder: 'mynickname' %>
+        <%= e.text_field :username, class: "form-control", placeholder: 'mynickname', :required => true %>
         <small class="text-muted">
             Must be unique and between 5-20 characters long.
         </small>
     </div>
     <div class="form-group input-group-lg">
         <label for="email">Email:</label>
-        <%= e.email_field :email, class: "form-control", placeholder: 'myname@example.com' %>
+        <%= e.email_field :email, class: "form-control", placeholder: 'myname@example.com', :required => true %>
     </div>
     <div class="form-group input-group-lg">
         <label for="password">Password:</label>
-        <%= e.password_field :password, class: "form-control", placeholder: 'Password'%>
+        <%= e.password_field :password, class: "form-control", placeholder: 'Password', :required => true %>
         <small class="text-muted">
             Enter a secure password by including special characters, numbers, uppercase and lowercase letters.
         </small>
     </div>
     <div class="form-group input-group-lg">
         <label for="password">Confirmation</label>
-        <%= e.password_field :password_confirmation, class: "form-control", placeholder: 'Repeat password' %>
+        <%= e.password_field :password_confirmation, class: "form-control", placeholder: 'Repeat password', :required => true %>
     </div>
     <div className="form-group terms-and-conditions checkbox mt-3">
         <div class="form-check">
