--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -41,7 +41,7 @@
                     </div>
                     <% end %>
                     <div class="form-group mt-3">
-                        <%= link_to "Delete", @user, method: :destroy, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-danger btn-block" %>
+                        <%= link_to "Delete", @user, method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-danger btn-block" %>
                     </div>
                 </div>
             </div>
