login button in navbar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -74,3 +74,11 @@ $gray-medium-light: #eaeaea;
   .profile-pic-edit {
     max-height: 330px;
   }
+
+  #loginDropdown {
+    border-radius: 25%;
+  }
+
+  .dropdown-login {
+    width: 250px;
+  }
