--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
-<% provide(:title, @user.username) %>
-<%= render 'shared/error_messages' %>
-<%= render 'components/profile_intro' %>
+  <% provide(:title, "sn.com | #{@user.username}") %>
+  <%= render 'shared/error_messages' %>
+  <%= render 'components/profile_intro' %>
+</div>
