--- a/app/views/layouts/user_profile.html.erb
+++ b/app/views/layouts/user_profile.html.erb
@@ -16,17 +16,7 @@
     <%= render 'shared/navigation' %>
   </header>
   <main class="root">
-    <div class="container">
-        <div class="row mt-4">
-            <div class="col-md-4">
-                <%= render 'components/profile_intro' %>
-            </div>
-            <div class="col-md-8">
-                <%= render 'components/profile_status'%>
-                <%= render 'components/profile_music_player'%>
-            </div>
-        </div>
-    </div>
+    <%= yield %>
   </main>
   <!-- <%= debug(params) if Rails.env.development? %> -->
 </html>
