--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Login") %>
 <div class="card">
     <div class="card-body login-max-width">
         <%= render 'shared/error_messages' %>
