--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
- <% provide(:title, "sn.com | Sign Up!") %>
+<!-- Title in Sign up form -->
 <div class="d-flex justify-content-center mt-3">
     <div class="col-sm-5 pull-right">
         <%= render 'shared/signup_form' %>
