--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Welcome") %>
 <% if !logged_in? %>
 <div class="center jumbotron jumbotron-welcome">
     <div class="container">
