--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Sign up") %>
 <div class="card">
     <div class="card-body login-max-width">
     <%= form_for(@user, { class: "needs-validation" }) do |e|%>
