--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "sn.com | #{@user.username}") %>
+<% provide(:title, "#{@user.username}") %>
 <div class="container">
       <div class="row mt-4">
           <div class="col-md-3">
