--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
           <div class="col-md-9">
               <%= render 'components/profile_status'%>
               <%= render 'components/profile_music_player'%>
+              <%= render 'components/profile_microposts'%>
           </div>
       </div>
 </div>
