--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,4 +70,10 @@
       border-radius: 0%;
   }
 </style>
+<% else %>
+<div class="container">
+    <section class="micropost_form mt-3">
+        <%= render 'shared/new_micropost' %>
+    </section>
+</div>
 <% end %>
