--- a/app/views/components/_profile_microposts.html.erb
+++ b/app/views/components/_profile_microposts.html.erb
@@ -1,16 +1,7 @@
-<div class="card mt-4">
-    <% if logged_in? %>
-        <div class="card mb-2">
-            <section class="micropost_form">
-                <%= render 'shared/new_micropost' %>
-            </section>
-        </div>
-    <% end %>
-    <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
-    <% end %>
-</div>
+<% if logged_in? %>
+    <div class="card mb-2 mt-4">
+        <section class="micropost_form">
+            <%= render 'shared/new_micropost' %>
+        </section>
+    </div>
+<% end %>
