--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,8 +1,12 @@
-<li id="micropost-<%= micropost.id %>">
-  <%= link_to gravatar_for(micropost.user, size: 30), micropost.user %>
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content"><%= micropost.content %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-  </span>
+<li id="micropost-<%= micropost.id %>" class="list-group-item">
+    <div class="">
+      <%= link_to gravatar_for(micropost.user, size: 30), micropost.user %>
+      <span class="user font-weight-light"><%= link_to micropost.user.name, micropost.user %></span>
+    <div>
+    <div class="">
+      <div class="row">
+        <span class="content ml-5 mt-2"><%= micropost.content %></span> 
+        <span class="text-muted"><%= time_ago_in_words(micropost.created_at) %> ago</span>
+      </div>
+    </div> 
 </li>
