--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <% provide(:title, "sn.com | Edit Profile") %>
+    <% provide(:title, " | Edit Profile") %>
     <div class="d-flex justify-content-center mt-3">
         <div class="card m-2 profile-pic-edit">
             <h5 class="card-header">Profile Picture</h5>
