--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,5 +75,8 @@
     <section class="micropost_form mt-3">
         <%= render 'shared/new_micropost' %>
     </section>
+    <section class="micropost_feed mb-5">
+        <%= render 'shared/feed'%>
+    </section>
 </div>
 <% end %>
