--- a/app/views/components/_profile_show_microposts.html.erb
+++ b/app/views/components/_profile_show_microposts.html.erb
@@ -1,9 +1,11 @@
 <div class="card mt-3">
     <% if @user.microposts.any? %>
       <!--<h3>Microposts (<%= @user.microposts.count %>)</h3>-->
-      <div class="list-group list-group-flush">
+      <div class="list-group list-group-flush" id="microposts">
         <%= render @microposts %>
       </div>
-      <%= will_paginate @microposts %>
+      <div id="infinite-scrolling">
+        <%= will_paginate @microposts %>
+      <div>
     <% end %>
 <div>
