--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %>
-    <div class="m-3">
+    <div class="posts">
         <%= render @feed_items %>
     </div>
     <%= will_paginate @feed_items %>
