--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,10 @@
   <% provide(:title, " | #{@user.username}") %>
   <%= render 'shared/error_messages' %>
       <div class="row mt-4">
-          <div class="col-md-3">
+          <div class="col-3">
               <%= render 'components/profile_intro' %>
           </div>
-          <div class="col-md-9">
+          <div class="col-9">
               <%= render 'components/profile_status'%>
               <%= render 'components/profile_music_player'%>
               <%= render 'components/profile_microposts'%>
