adding followers and following

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'components/profile_stats'%>
 <div class="container">
   <% provide(:title, " | #{@user.username}") %>
   <%= render 'shared/error_messages' %>
