--- a/app/views/components/_profile_intro.html.erb
+++ b/app/views/components/_profile_intro.html.erb
@@ -1,6 +1,6 @@
 <div class="card text-center mb-4"> <!-- maybe change to current_user later -->
     <div class="card-body">
-        <h3 class="card-title">&<%= @user.username %></h3>
+        <h3 class="card-title"><%= link_to @user.username, @user.username %></h3>
         <div class="row justify-content-center">
             <%= gravatar_for @user %>
         </div>
@@ -13,6 +13,9 @@
                 <%= image_tag("onlinenow.gif", :alt => "Online Now!", :width => "50%") %>
                 <% end %>
             </div>
+        </div>
+        <div class="row mt-2">
+            <button class="btn btn-primary btn-block">Follow</button>
         </div>
     </div>
 </div>
