--- a/app/views/components/_profile_show_microposts.html.erb
+++ b/app/views/components/_profile_show_microposts.html.erb
@@ -1,11 +1,11 @@
-<div class="card mt-3">
-    <% if @user.microposts.any? %>
+<% if @user.microposts.any? %>
+  <div class="card mt-3">
       <!--<h3>Microposts (<%= @user.microposts.count %>)</h3>-->
       <div class="list-group list-group-flush" id="microposts">
         <%= render @microposts %>
       </div>
       <div id="infinite-scrolling">
-        <%= will_paginate @microposts %>
+        <%= will_paginate @microposts, class: "pagination" %>
       <div>
-    <% end %>
-<div>
+  <div>
+<% end %>
