--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="col-9">
               <%= render 'components/profile_status'%>
-              <%= render 'components/profile_music_player'%>
+              <!--<%= render 'components/profile_music_player'%>-->
               <%= render 'components/profile_microposts'%>
               <%= render 'components/profile_show_microposts'%>
           </div>
