--- a/app/views/components/_profile_intro.html.erb
+++ b/app/views/components/_profile_intro.html.erb
@@ -1,11 +1,15 @@
 <div class="card text-center mb-4"> <!-- maybe change to current_user later -->
     <div class="card-body">
-        <h3 class="card-title"><%= link_to @user.username, @user.username %></h3>
         <div class="row justify-content-center">
             <%= gravatar_for @user %>
         </div>
         <div class="row">
-            <div class="col mt-2"><h5 class="card-text"><%= @user.name %></h5></div>
+            <div class="col mt-2">
+                <p class="card-text">
+                    <%= link_to @user.username, @user.username %>
+                    <br /><%= @user.name %>
+                </p>
+            </div>
         </div>
         <div class="row">
             <div class="col mt-2">
@@ -14,8 +18,10 @@
                 <% end %>
             </div>
         </div>
+        <% if !current_user?(@user) %>
         <div class="row mt-2">
-            <button class="btn btn-primary btn-block">Follow</button>
+            <button class="btn btn-primary btn-block">Add Friend</button>
         </div>
+        <% end %>
     </div>
 </div>
